EXTRA_DIST += \
	dbld/functions.sh \
	dbld/tarball \
	dbld/tarball-changes.ignore \
	dbld/pkg-tarball \
	dbld/package \
	dbld/rpm \
	dbld/deb \
	dbld/generate-rpm-specfile \
	dbld/generate-debian-directory \
	dbld/prepare-image-build \
	dbld/prepare-release \
	dbld/builddeps \
	dbld/shell \
	dbld/rules \
	dbld/bootstrap	\
	dbld/make \
	dbld/build.manifest	\
	dbld/packages.manifest \
	dbld/pip_packages.manifest \
	dbld/images/entrypoint.sh \
	dbld/images/fake-sudo.sh \
	dbld/images/yum-builddep.sha1 \
	dbld/images/almalinux.prepare.sh \
	dbld/images/debian.prepare.sh \
	dbld/images/ubuntu.prepare.sh \
	dbld/images/centos.prepare.sh \
	dbld/images/fedora.prepare.sh \
	dbld/images/almalinux-8.dockerfile \
	dbld/images/devshell.dockerfile \
	dbld/images/fedora-39.dockerfile \
	dbld/images/debian-bullseye.dockerfile \
	dbld/images/debian-bookworm.dockerfile \
	dbld/images/debian-sid.dockerfile \
	dbld/images/debian-testing.dockerfile \
	dbld/images/ubuntu-focal.dockerfile \
	dbld/images/ubuntu-jammy.dockerfile \
	dbld/images/ubuntu-noble.dockerfile \
	dbld/images/ubuntu-lunar.dockerfile \
	dbld/images/ubuntu-mantic.dockerfile \
	dbld/images/kira.dockerfile \
	dbld/images/tarball.dockerfile \
	dbld/images/hooks/build \
	dbld/images/README.md \
	dbld/README.md
